--- a/splash_settings.html
+++ b/splash_settings.html
@@ -11,7 +11,7 @@
   <main class="app-container" style="max-width: 900px; height: auto; min-height: 100dvh;">
     <header class="header">
       <h1>Settings Center</h1>
-      <a href="index.html" class="splash-utility-btn">Back to Splash</a>
+      <a href="index.html" class="splash-utility-btn">Back to Menu</a>
     </header>
 
     <section class="visualization-panel">
